# Research-Application-CAG

./: .dockerignore  CHANGELOG.md  DOCKER_GUIDE.md  LICENSE  README.md  docker-compose.yml
OneDrive/Desktop/RAG system/backend/: .env.example  .gitignore  API_EXAMPLES.py  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  VERIFICATION_CHECKLIST.md  conftest.py  docker-compose.yml  pyproject.toml
OneDrive/Desktop/RAG system/backend/app/models/: __init__.py  schemas.py
OneDrive/Desktop/RAG system/backend/app/services/: __init__.py  gemini_service.py  rag_service.py
OneDrive/Desktop/RAG system/backend/app/utils/: __init__.py  cache.py  vector_store.py
backend/: .dockerignore  .env.example  00_START_HERE.md  Dockerfile  GETTING_STARTED.md  INDEX.md  PROJECT_STRUCTURE.md  README.md  START_HERE.txt  cache.py  config.py  db.py  embeddings.py  init_app.py  main.py  requirements.txt  start.bat  start.sh  summary_extractor.py  wsgi.py
backend/app/: __init__.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: __init__.py  documents.py  health.py  qa.py
backend/app/services/: gemini_service.py  rag_service.py
backend/app/utils/: pdf_processor.py  vector_store.py
backend/config/: settings.py
backend/models/: chat_models.py
backend/routes/: chat.py  documents.py
docs/: Architecture.md  CACHE_CYCLE.md  SELF_IMPROVING.md
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  FileUpload.css  index.js  (+3 more)
(+1 files in other folders)
